Regulate output format and read weight utils

--- a/python-reference/front_end.ipynb
+++ b/python-reference/front_end.ipynb
@@ -155,8 +155,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T20:59:45.307657Z",
-     "start_time": "2024-10-09T20:59:45.072944Z"
+     "end_time": "2024-10-09T22:52:42.647330Z",
+     "start_time": "2024-10-09T22:52:42.349538Z"
     }
    },
    "source": [
@@ -180,13 +180,13 @@
     "    df_weight_a2 = pd.DataFrame(net.weights[1])\n",
     "    df_weight_o = pd.DataFrame(net.weights[2])\n",
     "\n",
-    "    df_biases_a1.to_csv('../data/biases_a1.csv')\n",
-    "    df_biases_a2.to_csv('../data/biases_a2.csv')\n",
-    "    df_biases_o.to_csv('../data/biases_o.csv')\n",
+    "    df_biases_a1.to_csv('../data/biases_a1.csv', index=False)\n",
+    "    df_biases_a2.to_csv('../data/biases_a2.csv' , index=False)\n",
+    "    df_biases_o.to_csv('../data/biases_o.csv', index=False)\n",
     "\n",
-    "    df_weight_a1.to_csv('../data/weights_a1.csv')\n",
-    "    df_weight_a2.to_csv('../data/weights_a2.csv')\n",
-    "    df_weight_o.to_csv('../data/weights_o.csv')\n",
+    "    df_weight_a1.to_csv('../data/weights_a1.csv', index=False)\n",
+    "    df_weight_a2.to_csv('../data/weights_a2.csv', index=False)\n",
+    "    df_weight_o.to_csv('../data/weights_o.csv', index=False)\n",
     "    return\n",
     "\n",
     "export_csv(net)"
@@ -362,7 +362,7 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 18
   },
   {
    "metadata": {},
