update python notebook

--- a/python-reference/front_end.ipynb
+++ b/python-reference/front_end.ipynb
@@ -138,16 +138,6 @@
       "(300, 300)\n",
       "(10, 300)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.1113"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -164,9 +154,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 906 ms\n",
+      "Wall time: 933 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.1113"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time\n",
     "#Evaluate the model before training\n",
@@ -175,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-09T20:52:09.577864Z",
@@ -187,8 +196,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 1min 27s\n",
-      "Wall time: 1min 31s\n"
+      "CPU times: total: 1min 26s\n",
+      "Wall time: 1min 30s\n"
      ]
     },
     {
@@ -197,7 +206,7 @@
        "0.9108"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-09T22:52:42.647330Z",
