--- a/python-reference/front_end.ipynb
+++ b/python-reference/front_end.ipynb
@@ -146,8 +146,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 389 ms, sys: 52.7 ms, total: 442 ms\n",
-      "Wall time: 410 ms\n"
+      "CPU times: user 902 ms, sys: 102 ms, total: 1 s\n",
+      "Wall time: 977 ms\n"
      ]
     },
     {
@@ -196,8 +196,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 384 ms, sys: 55.9 ms, total: 440 ms\n",
-      "Wall time: 412 ms\n"
+      "CPU times: user 864 ms, sys: 47.2 ms, total: 912 ms\n",
+      "Wall time: 897 ms\n"
      ]
     },
     {
@@ -230,8 +230,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.27 s, sys: 119 ms, total: 2.39 s\n",
-      "Wall time: 2.34 s\n"
+      "CPU times: user 4.54 s, sys: 91.6 ms, total: 4.63 s\n",
+      "Wall time: 4.61 s\n"
      ]
     },
     {
@@ -296,8 +296,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7.81 s, sys: 6.18 s, total: 14 s\n",
-      "Wall time: 13.7 s\n"
+      "CPU times: user 18.5 s, sys: 135 µs, total: 18.5 s\n",
+      "Wall time: 18.5 s\n"
      ]
     }
    ],
@@ -345,8 +345,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 309 ms, sys: 326 ms, total: 634 ms\n",
-      "Wall time: 145 ms\n"
+      "CPU times: user 736 ms, sys: 160 ms, total: 896 ms\n",
+      "Wall time: 225 ms\n"
      ]
     },
     {
@@ -371,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"mps\") # cuda, mps, or cpu"
+    "device = torch.device(\"cuda\") # cuda, mps, or cpu"
    ]
   },
   {
@@ -404,13 +404,25 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch_training_images = torch_training_images.to(device)\n",
+    "torch_training_labels = torch_training_labels.to(device)\n",
+    "torch_test_images = torch_test_images.to(device)\n",
+    "torch_test_labels = torch_test_labels.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 64.2 ms, sys: 108 ms, total: 172 ms\n",
-      "Wall time: 413 ms\n"
+      "CPU times: user 70.2 ms, sys: 100 µs, total: 70.3 ms\n",
+      "Wall time: 83.2 ms\n"
      ]
     },
     {
@@ -419,20 +431,20 @@
        "0.9210833333333334"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "torch_net.evaluate(torch_training_images.to(device), torch_training_labels.to(device))"
+    "torch_net.evaluate(torch_training_images, torch_training_labels)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "torch",
    "language": "python",
    "name": "python3"
   },
@@ -446,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
