--- a/python-reference/front_end.ipynb
+++ b/python-reference/front_end.ipynb
@@ -146,8 +146,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 902 ms, sys: 102 ms, total: 1 s\n",
-      "Wall time: 977 ms\n"
+      "CPU times: total: 469 ms\n",
+      "Wall time: 503 ms\n"
      ]
     },
     {
@@ -176,9 +176,18 @@
      "start_time": "2024-11-01T01:03:21.120173Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 1min 30s\n",
+      "Wall time: 1min 31s\n"
+     ]
+    }
+   ],
    "source": [
-    "# %%time\n",
+    "%%time\n",
     "net.train(training_data=(training_labels, training_images), iterations=1, batch_size=10, learning_rate=0.1)"
    ]
   },
@@ -196,8 +205,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 864 ms, sys: 47.2 ms, total: 912 ms\n",
-      "Wall time: 897 ms\n"
+      "CPU times: total: 516 ms\n",
+      "Wall time: 515 ms\n"
      ]
     },
     {
@@ -230,8 +239,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.54 s, sys: 91.6 ms, total: 4.63 s\n",
-      "Wall time: 4.61 s\n"
+      "CPU times: total: 3.16 s\n",
+      "Wall time: 3.04 s\n"
      ]
     },
     {
@@ -272,21 +281,6 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-01T01:05:03.866240Z",
-     "start_time": "2024-11-01T01:05:03.862900Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# For comparison with C++/CUDA code\n",
-    "dweights, dbiases = net.propagate_backwards(test_labels[0], test_images[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2024-11-01T01:05:03.889221Z",
      "start_time": "2024-11-01T01:05:03.887461Z"
     }
@@ -296,8 +290,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18.5 s, sys: 135 µs, total: 18.5 s\n",
-      "Wall time: 18.5 s\n"
+      "CPU times: total: 15.2 s\n",
+      "Wall time: 15.2 s\n"
      ]
     }
    ],
@@ -309,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,15 +332,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 736 ms, sys: 160 ms, total: 896 ms\n",
-      "Wall time: 225 ms\n"
+      "CPU times: total: 750 ms\n",
+      "Wall time: 92.4 ms\n"
      ]
     },
     {
@@ -355,7 +349,7 @@
        "0.9210833333333334"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,9 +370,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 312 ms\n",
+      "Wall time: 88.3 ms\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -391,18 +393,19 @@
        ")"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "%%time\n",
     "torch_net.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,15 +417,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 70.2 ms, sys: 100 µs, total: 70.3 ms\n",
-      "Wall time: 83.2 ms\n"
+      "CPU times: total: 93.8 ms\n",
+      "Wall time: 92.6 ms\n"
      ]
     },
     {
@@ -431,7 +434,7 @@
        "0.9210833333333334"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,13 +443,20 @@
     "%%time\n",
     "torch_net.evaluate(torch_training_images, torch_training_labels)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch",
+   "display_name": "digit_classifier",
    "language": "python",
-   "name": "python3"
+   "name": "digit_classifier"
   },
   "language_info": {
    "codemirror_mode": {
@@ -458,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
